web-infras/parser/tests/fixtures/babel/es2018/object-rest-spread/expression-rest-not-last-invalid/output.txt
[SyntaxError]: Rest parameter must be last formal parameter (1,14)
1|({...rest, b} = {})
 |            ^
